--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -92,3 +92,8 @@
   position: absolute;
   left: 440px;
 }
+
+.breeding-rhombus-spinner {
+  position: absolute !important;
+  top: 20px !important;
+}
